@@ -189,6 +189,7 @@ SEXP do_dynload(SEXP, SEXP, SEXP, SEXP);
 SEXP do_dynunload(SEXP, SEXP, SEXP, SEXP);
 SEXP do_eapply(SEXP, SEXP, SEXP, SEXP);
 SEXP do_edit(SEXP, SEXP, SEXP, SEXP);
+SEXP do_encodeString(SEXP, SEXP, SEXP, SEXP);
 SEXP do_envir(SEXP, SEXP, SEXP, SEXP);
 SEXP do_envirgets(SEXP, SEXP, SEXP, SEXP);
 SEXP do_env2list(SEXP, SEXP, SEXP, SEXP);
