@@ -476,6 +476,7 @@ FUNTAB R_FunTab[] = {
     {"intToBits", do_intToBits, 1, 11, 1, {PP_FUNCALL, PREC_FN, 0}},
     {"rawToBits", do_rawToBits, 1, 11, 1, {PP_FUNCALL, PREC_FN, 0}},
     {"packBits", do_packBits, 1, 11, 2, {PP_FUNCALL, PREC_FN, 0}},
+    {"encodeString", do_encodeString, 1, 11, 5, {PP_FUNCALL, PREC_FN, 0}},
 
     /* Type Checking (typically implemented in ./coerce.c ) */
 
